tests/errors/type5.ramen
SELECT CASE WHEN false THEN 1 WHEN "bla" THEN 2 ELSE 3 END AS x;
